# -meme-

./: .gitignore  CMakeLists.txt  DesktopPet.qmlproject.qtds  DesktopPet_zh_SG.ts  README.md  c++大作业实验报告.docx  catrungamewidget.cpp  catrungamewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
